--- a/html/FORMULARIO/css/form.css
+++ b/html/FORMULARIO/css/form.css
@@ -13,7 +13,7 @@ h1 {
     margin: 20px 0;
 }
 form {
-    max-width: 700px;
+    max-width: 40vw;
     margin: 0 auto;
     padding: 20px;
     background-color: white;
